AnalizadorSintactico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ACCESS
    ADDRESS
    AFTER
    ALL
    ALPHABET
    ALPHABETIC
    ALPHABETIC_LOWER
    ALPHABETIC_UPPER
    ALPHANUMERIC_EDITED
    ALSO
    ALTER
    ALTERNATE
    AND
    AND_LOGICO
    ANY
    APHANUMERIC
    APOSTROFE
    APPLY
    ARE
    AREA
    AREAS
    ASCENDING
    ASIGNACION_DIVISION
    ASIGNACION_MULTI
    ASIGNACION_RESIDUO
    ASIGNACION_RESTA
    ASIGNACION_SUMA
    ASSIGN
    AT
    AUTO
    AUTOMATIC
    AUTOTERMINATE
    AUTO_SKIP
    BACKGROUND
    BACKGROUND_COLOR
    BACKGROUND_HIGH
    BACKGROUND_LOW
    BACKWARD
    BEEP
    BEFORE
    BELL
    BINARY
    BIND
    BLANK
    BLINK
    BLINKING
    BLOCK
    BOLD
    BOTTOM
    CALL
    CANCEL
    CD
    CF
    CH
    CHARACTER
    CHARACTERS
    CLASS
    CLOSE
    COBOL
    CODE
    CODE_SET
    COL
    COLLATING
    COLUMN
    COMA
    COMILLAS
    COMMA
    COMMENTS
    COMMENTS_C99
    COMMUNICATION
    COMP
    COMPUTATIONAL
    COMPUTATIONAL_1
    COMPUTATIONAL_2
    COMPUTATIONAL_3
    COMPUTATIONAL_4
    COMPUTE
    COMP_1
    COMP_2
    COMP_3
    COMP_4
    COMP_6
    CONSOLE
    CONTAINS
    CONTENT
    CONTINUE
    CONTROL
    CONTROLS
    CONVERSION
    CONVERT
    CONVERTING
    COPY
    CORCHETE_DER
    CORCHETE_IZQ
    CORR
    CORRESPONDING
    COUNT
    CRT
    CURRENCY
    CURSOR
    DATE
    DAY
    DAY_OF_WEEK
    DE
    DEBUG
    DEBUGGING
    DECIMAL_POINT
    DECLARATIVES
    DECREMENTO
    DEFAULT
    DELETE
    DELIMITED
    DELIMITER
    DEPENDING
    DESCENDING
    DESIGUAL
    DESIGUALDAD_ESTRICTA
    DESTINATION
    DETAIL
    DISABLE
    DISTINTO
    DOS_PUNTOS
    DRAWN
    DUPLICATES
    DYNAMIC
    ECHO
    EGI
    ELSE
    EMI
    EMPTY_CHECK
    ENABLED
    END_ACCEPT
    END_ADD
    END_CALL
    END_COMPUTE
    END_DELETE
    END_DIVIDE
    END_EVALUATEQ
    END_IF
    END_MULTIPLY
    END_OF_PAGE
    END_PERFORM
    END_READ
    END_RECEIVE
    END_RETURN
    END_REWRITE
    END_SEARCH
    END_START
    END_STRING
    END_SUBTRACT
    END_UNSTRING
    END_WRITE
    ENTER
    EOL
    EOP
    EOS
    EQUAL
    ERASE
    ERROR
    ESCAPE
    ESI
    ES_IGUAL
    ET
    EVALUATE
    EVERY
    EXCEPTION
    EXCLUSIVE
    EXIT
    EXPONENTE
    EXTEND
    EXTERNAL
    FALSE
    FD
    FILE_CONTROL
    FILE_ID
    FILE_PREFIX
    FILLER
    FINAL
    FIRST
    FOOTING
    FOR
    FOREGROUND_COLOR
    FOREGROUND_COLOUR
    FULL
    GENERATE
    GLOBAL
    GO
    GOBACK
    GREATER
    GRID
    GROUP
    HASHTAG
    HEADING
    HIGH
    HIGHLIGHT
    HIGH_BALUE
    HIGH_VALUES
    IDENTIFICADOR
    IF
    IGUAL
    IGUALDAD_ESTRICTA
    IN
    INCREMENTO
    INDEX
    INDEXED
    INDICATE
    INITIAL
    INITIALIZE
    INPUT
    INPUT_OUTPUT
    INSPECT
    INVALID
    IS
    I_O
    JUST
    JUSTIFIED
    KEY
    LABEL
    LAST
    LEADING
    LEFT
    LEFTLINE
    LENGTH_CHECK
    LESS
    LIMIT
    LIMITS
    LINAGE
    LINES
    LINGAKE_COUNTER
    LINKAGE
    LLAVE_DER
    LLAVE_IZQ
    LOCK
    LOCK_HOLDING
    LOW
    LOWLIGHT
    LOW_VALUE
    LOW_VALUES
    MAS_IGUAL
    MAYOR_IGUAL
    MAYOR_QUE
    MEMORY
    MENOR_IGUAL
    MENOR_QUE
    MENOS_IGUAL
    MERGE
    MODE
    MODULES
    MOVE
    MULTIPLE
    MULTIPLICACION
    NATIVE
    NEGATIVE
    NEXT
    NOT
    NOT_LOGICO
    NO_ECHO
    NUMBER
    NUMERIC
    NUMERIC_EDITED
    OCCURS
    OF
    OFF
    OMITTED
    ON
    OPEN
    OPTIONAL
    OP_DIVISION
    OR
    ORDER
    ORGANIZATION
    OR_LOGICO
    OTHER
    OTHERS
    OUTPUT
    OVERFLOW
    OVERLINE
    PACKED_DECIMAL
    PADDING
    PAGE_COUNTER
    PERFORM
    PGE
    PLUS
    POINTER
    POS
    POSITION
    POSITIVE
    PREVIOUS
    PRINTING
    PRINT_CONTROL
    PROCEDURES
    PROCEED
    PROMPT
    PROTECTED
    PUNTOYCOMA
    PURGE
    QUEUE
    QUOTE
    QUOTES
    RANDOM
    RD
    READ
    READERS
    RECEIVE
    RECORD
    RECORDING
    RECORDS
    REDEFINES
    REEL
    REFERENCE
    REFERENCES
    RELATIVE
    RELEASE
    REMAINDER
    REMOVAL
    RENAMES
    REPLACE
    REPLACING
    REPORT
    REPORTING
    REPORTS
    REQUIRED
    RERUN
    RESERVE
    RESIDUO
    RESTA
    RETUNRNIN
    RETURN
    RETURN_CODE
    RETURN_UNSIGNED
    REVERSE
    REVERSED
    REVERSE_VIDEO
    REWIND
    REWRITE
    RF
    RH
    RIGHT
    ROLLBACK
    SAME
    SCREEN
    SD
    SEARCH
    SECURE
    SEGMENT
    SEGMENT_LIMIT
    SELECT
    SEND
    SENTENCE
    SEPARATE
    SEQUENCE
    SEQUENTIAL
    SET
    SIGN
    SIZE
    SORT
    SORT_MERGE
    SOURCE
    SPACE
    SPACES
    STANDARD
    START
    STATUS
    SUMA
    SUPPRESS
    SYCHRONIZED
    SYMBOLIC
    SYNC
    TAB
    TALLYNG
    TAPE
    TERMINAL
    TERMINATE
    TEST
    TEXT
    THAN
    THEN
    THROUGH
    THRU
    TIME
    TIMES
    TOP
    TRAILING
    TRUE
    UNDERLINE
    UNDERLINED
    UNIT
    UNLOCK
    UNSTRING
    UNTIL
    UP
    UPDATE
    UPDATES
    UPON
    USAGE
    USE
    USING
    VALUES
    VARYING
    WHEN
    WORDS
    WRITE
    WRITERS
    ZERO
    ZEROES
    ZEROS

Grammar

Rule 0     S' -> cobol_source_program
Rule 1     cobol_source_program -> IDENTIFICATION DIVISION PUNTO program_id_cobol_source_program identification_division_content ENVIRONMENT DIVISION PUNTO enviroment_division_content DATA DIVISION PUNTO data_division_content procedure_division nested_cobol_source_program END PROGRAM VARIABLE PUNTO
Rule 2     program_id_cobol_source_program -> PROGRAM_ID PUNTO VARIABLE PUNTO
Rule 3     nested_cobol_source_program -> IDENTIFICATION DIVISION PUNTO program_id_nested_cobol_source_program identification_division_content ENVIRONMENT DIVISION PUNTO enviroment_division_content DATA DIVISION PUNTO data_division_content procedure_division nested_cobol_source_program END PROGRAM VARIABLE PUNTO
Rule 4     nested_cobol_source_program -> empty
Rule 5     program_id_nested_cobol_source_program -> PROGRAM_ID PUNTO VARIABLE PUNTO
Rule 6     identification_division_content -> AUTHOR PUNTO VARIABLE PUNTO identification_division_content
Rule 7     identification_division_content -> identification_division_content INSTALLATION PUNTO VARIABLE PUNTO
Rule 8     identification_division_content -> identification_division_content DATE_WRITTEN PUNTO VARIABLE PUNTO
Rule 9     identification_division_content -> identification_division_content DATE_COMPILED PUNTO VARIABLE PUNTO
Rule 10    identification_division_content -> identification_division_content SECURITY PUNTO VARIABLE PUNTO
Rule 11    identification_division_content -> empty
Rule 12    enviroment_division_content -> configuration_section
Rule 13    configuration_section -> CONFIGURATION SECTION PUNTO
Rule 14    configuration_section -> CONFIGURATION SECTION PUNTO configuration_section_paragrahs
Rule 15    configuration_section -> empty
Rule 16    configuration_section_paragrahs -> source_computer_paragraph object_computer_paragraph special_names_paragraph
Rule 17    source_computer_paragraph -> SOURCE_COMPUTER PUNTO VARIABLE PUNTO
Rule 18    source_computer_paragraph -> empty
Rule 19    object_computer_paragraph -> OBJECT_COMPUTER PUNTO VARIABLE PUNTO
Rule 20    object_computer_paragraph -> empty
Rule 21    special_names_paragraph -> SPECIAL_NAMES PUNTO VARIABLE PUNTO
Rule 22    special_names_paragraph -> empty
Rule 23    data_division_content -> WORKING_STORAGE SECTION PUNTO data_item_entry
Rule 24    data_division_content -> FILE SECTION PUNTO data_file_entry
Rule 25    data_division_content -> FILE SECTION PUNTO WORKING_STORAGE SECTION PUNTO data_item_entry
Rule 26    data_division_content -> empty
Rule 27    data_item_entry -> stament_declaration_var
Rule 28    data_item_entry -> data_item_entry stament_declaration_var
Rule 29    data_item_entry -> empty
Rule 30    data_file_entry -> empty
Rule 31    stament_declaration_var -> stament_declaration_var NUMERO VARIABLE PIC NUMERO PARENT_IZQ NUMERO PARENT_DER PUNTO
Rule 32    stament_declaration_var -> stament_declaration_var NUMERO VARIABLE PIC VARIABLE PARENT_IZQ NUMERO PARENT_DER PUNTO
Rule 33    stament_declaration_var -> stament_declaration_var NUMERO VARIABLE PICTURE VARIABLE PARENT_IZQ NUMERO PARENT_DER PUNTO
Rule 34    stament_declaration_var -> stament_declaration_var NUMERO VARIABLE PIC VARIABLE PARENT_IZQ NUMERO PARENT_DER PUNTO VALUE STRING
Rule 35    stament_declaration_var -> stament_declaration_var NUMERO VARIABLE PIC VARIABLE PUNTO
Rule 36    stament_declaration_var -> stament_declaration_var NUMERO VARIABLE PIC NUMERO PUNTO
Rule 37    stament_declaration_var -> empty
Rule 38    procedure_division -> PROCEDURE DIVISION PUNTO paragrahps
Rule 39    procedure_division -> PROCEDURE DIVISION PUNTO MAIN_PROCEDURE PUNTO paragrahps
Rule 40    paragrahps -> statements
Rule 41    paragrahps -> paragrahps statements
Rule 42    paragrahps -> paragrahps statements STOP RUN PUNTO
Rule 43    paragrahps -> empty
Rule 44    statements -> stm_display
Rule 45    statements -> stm_acept
Rule 46    statements -> stm_add
Rule 47    statements -> stm_divide
Rule 48    statements -> stm_multiply
Rule 49    statements -> stm_minus
Rule 50    statements -> empty
Rule 51    stm_display -> DISPLAY STRING PUNTO
Rule 52    stm_display -> DISPLAY STRING VARIABLE PUNTO
Rule 53    stm_display -> stm_display DISPLAY STRING PUNTO
Rule 54    stm_display -> stm_display DISPLAY STRING WITH NO ADVANCING PUNTO
Rule 55    stm_display -> stm_display DISPLAY STRING VARIABLE PUNTO
Rule 56    stm_display -> stm_display DISPLAY VARIABLE STRING PUNTO
Rule 57    stm_display -> stm_display DISPLAY STRING FUNCTION LENGTH PARENT_IZQ VARIABLE PARENT_DER PUNTO
Rule 58    stm_display -> empty
Rule 59    stm_acept -> ACCEPT VARIABLE PUNTO
Rule 60    stm_acept -> stm_acept ACCEPT VARIABLE PUNTO
Rule 61    stm_acept -> empty
Rule 62    stm_add -> ADD VARIABLE TO VARIABLE GIVING VARIABLE PUNTO
Rule 63    stm_add -> ADD VARIABLE TO VARIABLE PUNTO
Rule 64    stm_divide -> DIVIDE VARIABLE INTO VARIABLE GIVING VARIABLE PUNTO
Rule 65    stm_divide -> DIVIDE VARIABLE INTO VARIABLE PUNTO
Rule 66    stm_multiply -> MULTIPLY VARIABLE BY VARIABLE GIVING VARIABLE PUNTO
Rule 67    stm_multiply -> MULTIPLY VARIABLE BY VARIABLE PUNTO
Rule 68    stm_minus -> SUBTRACT VARIABLE FROM VARIABLE GIVING VARIABLE PUNTO
Rule 69    stm_minus -> SUBTRACT VARIABLE FROM VARIABLE PUNTO
Rule 70    empty -> <empty>

Terminals, with rules where they appear

ACCEPT               : 59 60
ACCESS               : 
ADD                  : 62 63
ADDRESS              : 
ADVANCING            : 54
AFTER                : 
ALL                  : 
ALPHABET             : 
ALPHABETIC           : 
ALPHABETIC_LOWER     : 
ALPHABETIC_UPPER     : 
ALPHANUMERIC_EDITED  : 
ALSO                 : 
ALTER                : 
ALTERNATE            : 
AND                  : 
AND_LOGICO           : 
ANY                  : 
APHANUMERIC          : 
APOSTROFE            : 
APPLY                : 
ARE                  : 
AREA                 : 
AREAS                : 
ASCENDING            : 
ASIGNACION_DIVISION  : 
ASIGNACION_MULTI     : 
ASIGNACION_RESIDUO   : 
ASIGNACION_RESTA     : 
ASIGNACION_SUMA      : 
ASSIGN               : 
AT                   : 
AUTHOR               : 6
AUTO                 : 
AUTOMATIC            : 
AUTOTERMINATE        : 
AUTO_SKIP            : 
BACKGROUND           : 
BACKGROUND_COLOR     : 
BACKGROUND_HIGH      : 
BACKGROUND_LOW       : 
BACKWARD             : 
BEEP                 : 
BEFORE               : 
BELL                 : 
BINARY               : 
BIND                 : 
BLANK                : 
BLINK                : 
BLINKING             : 
BLOCK                : 
BOLD                 : 
BOTTOM               : 
BY                   : 66 67
CALL                 : 
CANCEL               : 
CD                   : 
CF                   : 
CH                   : 
CHARACTER            : 
CHARACTERS           : 
CLASS                : 
CLOSE                : 
COBOL                : 
CODE                 : 
CODE_SET             : 
COL                  : 
COLLATING            : 
COLUMN               : 
COMA                 : 
COMILLAS             : 
COMMA                : 
COMMENTS             : 
COMMENTS_C99         : 
COMMUNICATION        : 
COMP                 : 
COMPUTATIONAL        : 
COMPUTATIONAL_1      : 
COMPUTATIONAL_2      : 
COMPUTATIONAL_3      : 
COMPUTATIONAL_4      : 
COMPUTE              : 
COMP_1               : 
COMP_2               : 
COMP_3               : 
COMP_4               : 
COMP_6               : 
CONFIGURATION        : 13 14
CONSOLE              : 
CONTAINS             : 
CONTENT              : 
CONTINUE             : 
CONTROL              : 
CONTROLS             : 
CONVERSION           : 
CONVERT              : 
CONVERTING           : 
COPY                 : 
CORCHETE_DER         : 
CORCHETE_IZQ         : 
CORR                 : 
CORRESPONDING        : 
COUNT                : 
CRT                  : 
CURRENCY             : 
CURSOR               : 
DATA                 : 1 3
DATE                 : 
DATE_COMPILED        : 9
DATE_WRITTEN         : 8
DAY                  : 
DAY_OF_WEEK          : 
DE                   : 
DEBUG                : 
DEBUGGING            : 
DECIMAL_POINT        : 
DECLARATIVES         : 
DECREMENTO           : 
DEFAULT              : 
DELETE               : 
DELIMITED            : 
DELIMITER            : 
DEPENDING            : 
DESCENDING           : 
DESIGUAL             : 
DESIGUALDAD_ESTRICTA : 
DESTINATION          : 
DETAIL               : 
DISABLE              : 
DISPLAY              : 51 52 53 54 55 56 57
DISTINTO             : 
DIVIDE               : 64 65
DIVISION             : 1 1 1 3 3 3 38 39
DOS_PUNTOS           : 
DRAWN                : 
DUPLICATES           : 
DYNAMIC              : 
ECHO                 : 
EGI                  : 
ELSE                 : 
EMI                  : 
EMPTY_CHECK          : 
ENABLED              : 
END                  : 1 3
END_ACCEPT           : 
END_ADD              : 
END_CALL             : 
END_COMPUTE          : 
END_DELETE           : 
END_DIVIDE           : 
END_EVALUATEQ        : 
END_IF               : 
END_MULTIPLY         : 
END_OF_PAGE          : 
END_PERFORM          : 
END_READ             : 
END_RECEIVE          : 
END_RETURN           : 
END_REWRITE          : 
END_SEARCH           : 
END_START            : 
END_STRING           : 
END_SUBTRACT         : 
END_UNSTRING         : 
END_WRITE            : 
ENTER                : 
ENVIRONMENT          : 1 3
EOL                  : 
EOP                  : 
EOS                  : 
EQUAL                : 
ERASE                : 
ERROR                : 
ESCAPE               : 
ESI                  : 
ES_IGUAL             : 
ET                   : 
EVALUATE             : 
EVERY                : 
EXCEPTION            : 
EXCLUSIVE            : 
EXIT                 : 
EXPONENTE            : 
EXTEND               : 
EXTERNAL             : 
FALSE                : 
FD                   : 
FILE                 : 24 25
FILE_CONTROL         : 
FILE_ID              : 
FILE_PREFIX          : 
FILLER               : 
FINAL                : 
FIRST                : 
FOOTING              : 
FOR                  : 
FOREGROUND_COLOR     : 
FOREGROUND_COLOUR    : 
FROM                 : 68 69
FULL                 : 
FUNCTION             : 57
GENERATE             : 
GIVING               : 62 64 66 68
GLOBAL               : 
GO                   : 
GOBACK               : 
GREATER              : 
GRID                 : 
GROUP                : 
HASHTAG              : 
HEADING              : 
HIGH                 : 
HIGHLIGHT            : 
HIGH_BALUE           : 
HIGH_VALUES          : 
IDENTIFICADOR        : 
IDENTIFICATION       : 1 3
IF                   : 
IGUAL                : 
IGUALDAD_ESTRICTA    : 
IN                   : 
INCREMENTO           : 
INDEX                : 
INDEXED              : 
INDICATE             : 
INITIAL              : 
INITIALIZE           : 
INPUT                : 
INPUT_OUTPUT         : 
INSPECT              : 
INSTALLATION         : 7
INTO                 : 64 65
INVALID              : 
IS                   : 
I_O                  : 
JUST                 : 
JUSTIFIED            : 
KEY                  : 
LABEL                : 
LAST                 : 
LEADING              : 
LEFT                 : 
LEFTLINE             : 
LENGTH               : 57
LENGTH_CHECK         : 
LESS                 : 
LIMIT                : 
LIMITS               : 
LINAGE               : 
LINES                : 
LINGAKE_COUNTER      : 
LINKAGE              : 
LLAVE_DER            : 
LLAVE_IZQ            : 
LOCK                 : 
LOCK_HOLDING         : 
LOW                  : 
LOWLIGHT             : 
LOW_VALUE            : 
LOW_VALUES           : 
MAIN_PROCEDURE       : 39
MAS_IGUAL            : 
MAYOR_IGUAL          : 
MAYOR_QUE            : 
MEMORY               : 
MENOR_IGUAL          : 
MENOR_QUE            : 
MENOS_IGUAL          : 
MERGE                : 
MODE                 : 
MODULES              : 
MOVE                 : 
MULTIPLE             : 
MULTIPLICACION       : 
MULTIPLY             : 66 67
NATIVE               : 
NEGATIVE             : 
NEXT                 : 
NO                   : 54
NOT                  : 
NOT_LOGICO           : 
NO_ECHO              : 
NUMBER               : 
NUMERIC              : 
NUMERIC_EDITED       : 
NUMERO               : 31 31 31 32 32 33 33 34 34 35 36 36
OBJECT_COMPUTER      : 19
OCCURS               : 
OF                   : 
OFF                  : 
OMITTED              : 
ON                   : 
OPEN                 : 
OPTIONAL             : 
OP_DIVISION          : 
OR                   : 
ORDER                : 
ORGANIZATION         : 
OR_LOGICO            : 
OTHER                : 
OTHERS               : 
OUTPUT               : 
OVERFLOW             : 
OVERLINE             : 
PACKED_DECIMAL       : 
PADDING              : 
PAGE_COUNTER         : 
PARENT_DER           : 31 32 33 34 57
PARENT_IZQ           : 31 32 33 34 57
PERFORM              : 
PGE                  : 
PIC                  : 31 32 34 35 36
PICTURE              : 33
PLUS                 : 
POINTER              : 
POS                  : 
POSITION             : 
POSITIVE             : 
PREVIOUS             : 
PRINTING             : 
PRINT_CONTROL        : 
PROCEDURE            : 38 39
PROCEDURES           : 
PROCEED              : 
PROGRAM              : 1 3
PROGRAM_ID           : 2 5
PROMPT               : 
PROTECTED            : 
PUNTO                : 1 1 1 1 2 2 3 3 3 3 5 5 6 6 7 7 8 8 9 9 10 10 13 14 17 17 19 19 21 21 23 24 25 25 31 32 33 34 35 36 38 39 39 42 51 52 53 54 55 56 57 59 60 62 63 64 65 66 67 68 69
PUNTOYCOMA           : 
PURGE                : 
QUEUE                : 
QUOTE                : 
QUOTES               : 
RANDOM               : 
RD                   : 
READ                 : 
READERS              : 
RECEIVE              : 
RECORD               : 
RECORDING            : 
RECORDS              : 
REDEFINES            : 
REEL                 : 
REFERENCE            : 
REFERENCES           : 
RELATIVE             : 
RELEASE              : 
REMAINDER            : 
REMOVAL              : 
RENAMES              : 
REPLACE              : 
REPLACING            : 
REPORT               : 
REPORTING            : 
REPORTS              : 
REQUIRED             : 
RERUN                : 
RESERVE              : 
RESIDUO              : 
RESTA                : 
RETUNRNIN            : 
RETURN               : 
RETURN_CODE          : 
RETURN_UNSIGNED      : 
REVERSE              : 
REVERSED             : 
REVERSE_VIDEO        : 
REWIND               : 
REWRITE              : 
RF                   : 
RH                   : 
RIGHT                : 
ROLLBACK             : 
RUN                  : 42
SAME                 : 
SCREEN               : 
SD                   : 
SEARCH               : 
SECTION              : 13 14 23 24 25 25
SECURE               : 
SECURITY             : 10
SEGMENT              : 
SEGMENT_LIMIT        : 
SELECT               : 
SEND                 : 
SENTENCE             : 
SEPARATE             : 
SEQUENCE             : 
SEQUENTIAL           : 
SET                  : 
SIGN                 : 
SIZE                 : 
SORT                 : 
SORT_MERGE           : 
SOURCE               : 
SOURCE_COMPUTER      : 17
SPACE                : 
SPACES               : 
SPECIAL_NAMES        : 21
STANDARD             : 
START                : 
STATUS               : 
STOP                 : 42
STRING               : 34 51 52 53 54 55 56 57
SUBTRACT             : 68 69
SUMA                 : 
SUPPRESS             : 
SYCHRONIZED          : 
SYMBOLIC             : 
SYNC                 : 
TAB                  : 
TALLYNG              : 
TAPE                 : 
TERMINAL             : 
TERMINATE            : 
TEST                 : 
TEXT                 : 
THAN                 : 
THEN                 : 
THROUGH              : 
THRU                 : 
TIME                 : 
TIMES                : 
TO                   : 62 63
TOP                  : 
TRAILING             : 
TRUE                 : 
UNDERLINE            : 
UNDERLINED           : 
UNIT                 : 
UNLOCK               : 
UNSTRING             : 
UNTIL                : 
UP                   : 
UPDATE               : 
UPDATES              : 
UPON                 : 
USAGE                : 
USE                  : 
USING                : 
VALUE                : 34
VALUES               : 
VARIABLE             : 1 2 3 5 6 7 8 9 10 17 19 21 31 32 32 33 33 34 34 35 35 36 52 55 56 57 59 60 62 62 62 63 63 64 64 64 65 65 66 66 66 67 67 68 68 68 69 69
VARYING              : 
WHEN                 : 
WITH                 : 54
WORDS                : 
WORKING_STORAGE      : 23 25
WRITE                : 
WRITERS              : 
ZERO                 : 
ZEROES               : 
ZEROS                : 
error                : 

Nonterminals, with rules where they appear

cobol_source_program : 0
configuration_section : 12
configuration_section_paragrahs : 14
data_division_content : 1 3
data_file_entry      : 24
data_item_entry      : 23 25 28
empty                : 4 11 15 18 20 22 26 29 30 37 43 50 58 61
enviroment_division_content : 1 3
identification_division_content : 1 3 6 7 8 9 10
nested_cobol_source_program : 1 3
object_computer_paragraph : 16
paragrahps           : 38 39 41 42
procedure_division   : 1 3
program_id_cobol_source_program : 1
program_id_nested_cobol_source_program : 3
source_computer_paragraph : 16
special_names_paragraph : 16
stament_declaration_var : 27 28 31 32 33 34 35 36
statements           : 40 41 42
stm_acept            : 45 60
stm_add              : 46
stm_display          : 44 53 54 55 56 57
stm_divide           : 47
stm_minus            : 49
stm_multiply         : 48

Parsing method: SLR

state 0

    (0) S' -> . cobol_source_program
    (1) cobol_source_program -> . IDENTIFICATION DIVISION PUNTO program_id_cobol_source_program identification_division_content ENVIRONMENT DIVISION PUNTO enviroment_division_content DATA DIVISION PUNTO data_division_content procedure_division nested_cobol_source_program END PROGRAM VARIABLE PUNTO

    IDENTIFICATION  shift and go to state 2

    cobol_source_program           shift and go to state 1

state 1

    (0) S' -> cobol_source_program .



state 2

    (1) cobol_source_program -> IDENTIFICATION . DIVISION PUNTO program_id_cobol_source_program identification_division_content ENVIRONMENT DIVISION PUNTO enviroment_division_content DATA DIVISION PUNTO data_division_content procedure_division nested_cobol_source_program END PROGRAM VARIABLE PUNTO

    DIVISION        shift and go to state 3


state 3

    (1) cobol_source_program -> IDENTIFICATION DIVISION . PUNTO program_id_cobol_source_program identification_division_content ENVIRONMENT DIVISION PUNTO enviroment_division_content DATA DIVISION PUNTO data_division_content procedure_division nested_cobol_source_program END PROGRAM VARIABLE PUNTO

    PUNTO           shift and go to state 4


state 4

    (1) cobol_source_program -> IDENTIFICATION DIVISION PUNTO . program_id_cobol_source_program identification_division_content ENVIRONMENT DIVISION PUNTO enviroment_division_content DATA DIVISION PUNTO data_division_content procedure_division nested_cobol_source_program END PROGRAM VARIABLE PUNTO
    (2) program_id_cobol_source_program -> . PROGRAM_ID PUNTO VARIABLE PUNTO

    PROGRAM_ID      shift and go to state 6

    program_id_cobol_source_program shift and go to state 5

state 5

    (1) cobol_source_program -> IDENTIFICATION DIVISION PUNTO program_id_cobol_source_program . identification_division_content ENVIRONMENT DIVISION PUNTO enviroment_division_content DATA DIVISION PUNTO data_division_content procedure_division nested_cobol_source_program END PROGRAM VARIABLE PUNTO
    (6) identification_division_content -> . AUTHOR PUNTO VARIABLE PUNTO identification_division_content
    (7) identification_division_content -> . identification_division_content INSTALLATION PUNTO VARIABLE PUNTO
    (8) identification_division_content -> . identification_division_content DATE_WRITTEN PUNTO VARIABLE PUNTO
    (9) identification_division_content -> . identification_division_content DATE_COMPILED PUNTO VARIABLE PUNTO
    (10) identification_division_content -> . identification_division_content SECURITY PUNTO VARIABLE PUNTO
    (11) identification_division_content -> . empty
    (70) empty -> .

    AUTHOR          shift and go to state 8
    END             reduce using rule 70 (empty -> .)
    ENVIRONMENT     reduce using rule 70 (empty -> .)
    INSTALLATION    reduce using rule 70 (empty -> .)
    DATE_WRITTEN    reduce using rule 70 (empty -> .)
    DATE_COMPILED   reduce using rule 70 (empty -> .)
    SECURITY        reduce using rule 70 (empty -> .)
    DATA            reduce using rule 70 (empty -> .)
    OBJECT_COMPUTER reduce using rule 70 (empty -> .)
    SPECIAL_NAMES   reduce using rule 70 (empty -> .)
    PROCEDURE       reduce using rule 70 (empty -> .)
    NUMERO          reduce using rule 70 (empty -> .)
    IDENTIFICATION  reduce using rule 70 (empty -> .)
    DISPLAY         reduce using rule 70 (empty -> .)
    ACCEPT          reduce using rule 70 (empty -> .)
    ADD             reduce using rule 70 (empty -> .)
    DIVIDE          reduce using rule 70 (empty -> .)
    MULTIPLY        reduce using rule 70 (empty -> .)
    SUBTRACT        reduce using rule 70 (empty -> .)
    STOP            reduce using rule 70 (empty -> .)

    identification_division_content shift and go to state 7
    empty                          shift and go to state 9

state 6

    (2) program_id_cobol_source_program -> PROGRAM_ID . PUNTO VARIABLE PUNTO

    PUNTO           shift and go to state 10


state 7

    (1) cobol_source_program -> IDENTIFICATION DIVISION PUNTO program_id_cobol_source_program identification_division_content . ENVIRONMENT DIVISION PUNTO enviroment_division_content DATA DIVISION PUNTO data_division_content procedure_division nested_cobol_source_program END PROGRAM VARIABLE PUNTO
    (7) identification_division_content -> identification_division_content . INSTALLATION PUNTO VARIABLE PUNTO
    (8) identification_division_content -> identification_division_content . DATE_WRITTEN PUNTO VARIABLE PUNTO
    (9) identification_division_content -> identification_division_content . DATE_COMPILED PUNTO VARIABLE PUNTO
    (10) identification_division_content -> identification_division_content . SECURITY PUNTO VARIABLE PUNTO

    ENVIRONMENT     shift and go to state 11
    INSTALLATION    shift and go to state 12
    DATE_WRITTEN    shift and go to state 13
    DATE_COMPILED   shift and go to state 14
    SECURITY        shift and go to state 15


state 8

    (6) identification_division_content -> AUTHOR . PUNTO VARIABLE PUNTO identification_division_content

    PUNTO           shift and go to state 16


state 9

    (11) identification_division_content -> empty .

    ENVIRONMENT     reduce using rule 11 (identification_division_content -> empty .)
    INSTALLATION    reduce using rule 11 (identification_division_content -> empty .)
    DATE_WRITTEN    reduce using rule 11 (identification_division_content -> empty .)
    DATE_COMPILED   reduce using rule 11 (identification_division_content -> empty .)
    SECURITY        reduce using rule 11 (identification_division_content -> empty .)


state 10

    (2) program_id_cobol_source_program -> PROGRAM_ID PUNTO . VARIABLE PUNTO

    VARIABLE        shift and go to state 17


state 11

    (1) cobol_source_program -> IDENTIFICATION DIVISION PUNTO program_id_cobol_source_program identification_division_content ENVIRONMENT . DIVISION PUNTO enviroment_division_content DATA DIVISION PUNTO data_division_content procedure_division nested_cobol_source_program END PROGRAM VARIABLE PUNTO

    DIVISION        shift and go to state 18


state 12

    (7) identification_division_content -> identification_division_content INSTALLATION . PUNTO VARIABLE PUNTO

    PUNTO           shift and go to state 19


state 13

    (8) identification_division_content -> identification_division_content DATE_WRITTEN . PUNTO VARIABLE PUNTO

    PUNTO           shift and go to state 20


state 14

    (9) identification_division_content -> identification_division_content DATE_COMPILED . PUNTO VARIABLE PUNTO

    PUNTO           shift and go to state 21


state 15

    (10) identification_division_content -> identification_division_content SECURITY . PUNTO VARIABLE PUNTO

    PUNTO           shift and go to state 22


state 16

    (6) identification_division_content -> AUTHOR PUNTO . VARIABLE PUNTO identification_division_content

    VARIABLE        shift and go to state 23


state 17

    (2) program_id_cobol_source_program -> PROGRAM_ID PUNTO VARIABLE . PUNTO

    PUNTO           shift and go to state 24


state 18

    (1) cobol_source_program -> IDENTIFICATION DIVISION PUNTO program_id_cobol_source_program identification_division_content ENVIRONMENT DIVISION . PUNTO enviroment_division_content DATA DIVISION PUNTO data_division_content procedure_division nested_cobol_source_program END PROGRAM VARIABLE PUNTO

    PUNTO           shift and go to state 25


state 19

    (7) identification_division_content -> identification_division_content INSTALLATION PUNTO . VARIABLE PUNTO

    VARIABLE        shift and go to state 26


state 20

    (8) identification_division_content -> identification_division_content DATE_WRITTEN PUNTO . VARIABLE PUNTO

    VARIABLE        shift and go to state 27


state 21

    (9) identification_division_content -> identification_division_content DATE_COMPILED PUNTO . VARIABLE PUNTO

    VARIABLE        shift and go to state 28


state 22

    (10) identification_division_content -> identification_division_content SECURITY PUNTO . VARIABLE PUNTO

    VARIABLE        shift and go to state 29


state 23

    (6) identification_division_content -> AUTHOR PUNTO VARIABLE . PUNTO identification_division_content

    PUNTO           shift and go to state 30


state 24

    (2) program_id_cobol_source_program -> PROGRAM_ID PUNTO VARIABLE PUNTO .

